[metadata]
name = networking-h3c
summary = H3C Vendor Code for OpenStack Neutron to integrate with H3C SDN controller
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
	networking_h3c
data_files =
	etc/neutron/plugins/ml2 =
	etc/neutron/plugins/ml2/ml2_conf_h3c.ini

[global]
setup-hooks =
	pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    ml2_h3c = networking_h3c.ml2.mechanism_h3c:H3CMechanismDriver
neutron.service_plugins =
	h3c_l3_router = networking_h3c.l3_router.h3c_l3_router_plugin:H3CL3RouterPlugin
neutron.ml2.extension_drivers =
    ml2_extension_h3c = networking_h3c.ml2.extensions.extension_driver_h3c:ExtensionDriverH3C
neutron.db.alembic_migrations =
	networking-h3c = networking_h3c.db.migration:alembic_migrations

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_h3c/locale
domain = networking_h3c

[update_catalog]
domain = networking_h3c
output_dir = networking_h3c/locale
input_file = networking_h3c/locale/networking_h3c.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_h3c/locale/networking_h3c.pot
